<resources>
    <string name="app_name">Live Wallpaper Maker</string>
    <string name="file_name" translatable="false">wallpapermaker</string>

    --------------Splash screen-------------------
    <string name="txt_header_splash">Những hình ảnh bạn yêu thích. Tất cả trong một hình nền.</string>
    <string name="txt_btn_continue_splash">Tạo hình nền của riêng bạn</string>

    --------------Permission screen-------------------
    <string name="txt_request_permission">Để tạo ra những hình nền tuyệt vời cho bạn, chúng tôi cần truy cập bộ nhớ trong để lấy dữ liệu ảnh và video của bạn</string>
    <string name="txt_need_permission">Chúng tôi cần sự đồng ý của bạn</string>
    <string name="txt_btn_accept_permission">Cấp quyền</string>
    <string name="txt_btn_skip_permission">Bỏ qua</string>

    --------------Home screen-------------------
    <string name="text_tab_videos">Hình nền động</string>
    <string name="text_tab_me">Cá nhân</string>
    <string name="text_new_videos">Hình nền mới</string>
    <string name="text_new">Tạo</string>
    <string name="text_other_label_me_home">ỨNG DỤNG KHÁC</string>
    <string name="text_contact_support_label_me_home">Liên hệ hỗ trợ</string>
    <string name="text_privacy_policy_label_me_home">Chính sách quyền riêng tư</string>
    <string name="text_notifications_label_me_home">Thông báo</string>
    <string name="text_contact_support_email_me_home" translatable="false">support@tp.com.vn</string>
    <string name="text_setting_label_me_home">Cài đặt ứng dụng</string>


    --------------Pick image screen-------------------
    <string name="text_toolbar">Chọn ảnh</string>
    <string name="txt_drag_drop_image">Kéo thả để sắp xếp thứ tự ảnh</string>
    <string name="txt_continue_process">Tiếp tục</string>

    --------------Edit image screen-------------------
    <string name="str_title_editor_screen_1">Căn chỉnh</string>
    <string name="str_title_editor_screen_2">Bộ lọc</string>
    <string name="txt_save_filter">Lưu</string>

    --------------Preview screen-------------------
    <string name="text_toolbar_status_1">Xem trước video</string>
    <string name="text_toolbar_status_preview_image">Xem trước hình ảnh</string>
    <string name="text_toolbar_video">Video</string>
    <string name="text_toolbar_image">Ảnh</string>
    <string name="text_toolbar_status_2">Đã lưu video</string>
    <string name="text_toolbar_status_3">Hiệu ứng chuyển cảnh</string>
    <string name="text_save_success">Lưu thành công</string>
    <string name="txt_download_success">Tải về thành công</string>
    <string name="txt_change_animation">Đổi hiệu ứng</string>
    <string name="txt_save_video">Lưu video</string>
    <string name="txt_save_image">Lưu hình ảnh</string>
    <string name="txt_saving">Đang lưu</string>
    <string name="txt_processing">Đang xử lý</string>
    <string name="txt_preview">XEM TRƯỚC</string>
    <string name="txt_download">Tải về</string>

    --------------Setting screen-------------------
    <string name="txt_set_video_success">Cài hình nền video thành công!</string>
    <string name="txt_set_image_success">Cài hình nền thành công!</string>
    <string name="txt_ok">Đồng ý</string>
    <string name="txt_sorry_live_wallpaper_cannot_compatible">Rất tiếc, thiết bị của bạn không hỗ trợ hình nền video</string>
    <string name="txt_sorry_because_device_cannot_compatible">Cài hình nền video không thành công do thiết bị của bạn không hỗ trợ tính năng này</string>
    <string name="txt_setting_image_to">Dùng làm hình nền</string>
    <string name="txt_home_screen">Màn hình chính</string>
    <string name="txt_lock_screen">Màn hình khoá</string>
    <string name="txt_all">Màn hình khoá và chính</string>
    <string name="txt_share">Chia sẻ</string>
    <string name="txt_hint_reaname">Nhập tên</string>

    --------------Set wallpaper screen-------------------
    <string name="text_toolbar_status_set_wallpaper_video">Đã lưu video</string>
    <string name="text_toolbar_status_set_wallpaper_image">Đã lưu hình ảnh</string>

    --------------offline mode-------------------
    <string name="text_toast_connected_internet">Đã khôi phục kết nối Internet</string>
    <string name="text_toast_connect_internet_fail">Kết nối mạng bị mất</string>

    -----------------dialog--------------------------------
    <string name="txt_need_watch_ads_to_download">Xem quảng cáo để lưu tiến trình!</string>
    <string name="txt_need_watch_ads_to_download_description">Bạn chỉ cần xem một đoạn video ngắn để lưu tệp về thiết bị.</string>
    <string name="txt_watch_ads">Xem quảng cáo</string>
    <string name="txt_no_thanks">Không, cảm ơn</string>
    <string name="txt_need_watch_ads_again">Tiến trình của bạn sẽ không thể tải xuống điện thoại nếu bạn không xem quảng cáo.</string>
    <string name="txt_need_watch_ads_to_download_description_again">Vui lòng dành vài giây để xem quảng cáo!</string>
    <string name="txt_no_thanks_again">Quay lại và không lưu</string>
    <string name="txt_wanna_exit">Bạn có chắc chắn muốn thoát?</string>
    <string name="txt_wanna_delete">Bạn có chắc chắn muốn xóa video này?</string>
    <string name="txt_warning_delete">Hành động này sẽ không thể hoàn tác</string>
    <string name="txt_warning_unsave_progress">Tiến trình của bạn sẽ mất và không thể hoàn tác!</string>
    <string name="txt_back">Quay lại</string>
    <string name="txt_eixt">Thoát</string>
    <string name="txt_no">Không</string>
    <string name="txt_confirm_delete">Xác nhận xóa</string>


    --------------Native ads-------------------
    <string name="text_setting_btn_native_ads_video">Cài đặt</string>

    --------------template-------------------
    <string name="txt_slide_left">Lộ ra</string>
    <string name="txt_slide_up">Đẩy lên</string>
    <string name="txt_window">Cửa sổ</string>
    <string name="txt_zoom_in">Zoom in</string>
    <string name="txt_mix_1">Ngẫu hứng 1</string>
    <string name="txt_mix_2">Ngẫu hứng 2</string>
    <string name="txt_zoom_out">Zoom out</string>

    --------------Toast-------------------
    <string name="txt_explain_permission_storage">Chúng tôi cần sự cho phép của bạn để sử dụng tính năng này</string>
    <string name="txt_set_wallpaper_error">Rất tiếc hình nền không thể cài đặt thành công</string>
    <string name="str_use_template">Sử dụng mẫu này</string>
    <string name="str_preview_template">Xem trước mẫu</string>
</resources>