<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:background="@color/color_FBFBFB"
        android:paddingHorizontal="@dimen/dp16"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/img_bg_request_permission_storage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/btn_request_permission"
        app:layout_constraintBottom_toTopOf="@id/btn_later"
        android:background="@drawable/bg_positive_btn"
        android:layout_marginBottom="@dimen/dp23"
        android:textSize="@dimen/sp14"
        android:paddingVertical="@dimen/dp16"
        android:text="@string/txt_btn_accept_permission"
        android:gravity="center"
        android:fontFamily="@font/beviet_semi_bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_explain_permission"
            app:layout_constraintBottom_toTopOf="@id/btn_request_permission"
            android:layout_marginBottom="@dimen/dp30"
            android:textSize="@dimen/sp14"
            android:gravity="start"
            android:fontFamily="@font/beviet_medium"
            android:textColor="@color/color_131313"
            android:text="@string/txt_request_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintBottom_toTopOf="@id/tv_explain_permission"
            android:layout_marginBottom="@dimen/dp30"
            android:textColor="@color/black"
            android:fontFamily="@font/beviet_extra_bold"
            android:text="@string/txt_need_permission"
            android:textSize="@dimen/sp40"
            android:lineHeight="@dimen/sp51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/btn_later"
            android:text="@string/txt_btn_skip_permission"
            android:fontFamily="@font/beviet_semi_bold"
            android:textColor="@color/color_DE1129"
            android:textSize="@dimen/sp14"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp50"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
